Added VAT and Address Information For Client

--- a/YandS.UI/Views/Finance/_CaseInvoiceClientAddress.cshtml
+++ b/YandS.UI/Views/Finance/_CaseInvoiceClientAddress.cshtml
@@ -172,6 +172,50 @@ else if (Model.ClientName.ToUpper().Trim() == "TILAL DEVELOPMENT COMPANY")
         <td class="auto-style4"></td>
     </tr>
 }
+else if (Model.ClientName.ToUpper().Trim() == "TILAL INTERNATIONAL TRADE MARKS LLC")
+{
+    <tr height="29" style="mso-height-source:userset;height:21.95pt">
+        <td class="auto-style3" height="29"></td>
+        <td class="auto-style4"></td>
+        <td class="auto-style5" colspan="23" rowspan="2">TILAL INTERNATIONAL TRADE MARKS LLC</td>
+        <td class="auto-style4"></td>
+        <td class="auto-style4"></td>
+    </tr>
+    <tr height="29" style="mso-height-source:userset;height:21.95pt">
+        <td class="auto-style3" height="29"></td>
+        <td class="auto-style4"></td>
+        <td class="auto-style4"></td>
+        <td class="auto-style4"></td>
+    </tr>
+    <tr height="29" style="mso-height-source:userset;height:21.95pt">
+        <td class="auto-style3" height="29"></td>
+        <td class="auto-style4"></td>
+        <td class="auto-style6" colspan="23">VATIN : OM1100123108</td>
+        <td class="auto-style4"></td>
+        <td class="auto-style4"></td>
+    </tr>
+    <tr height="29" style="mso-height-source:userset;height:21.95pt">
+        <td class="auto-style3" height="29"></td>
+        <td class="auto-style4"></td>
+        <td class="auto-style6" colspan="23">2ND FLOOR, TILAL OFFICE COMPLEX, MUSCAT GRAND MALL</td>
+        <td class="auto-style4"></td>
+        <td class="auto-style4"></td>
+    </tr>
+    <tr height="29" style="mso-height-source:userset;height:21.95pt">
+        <td class="auto-style3" height="29"></td>
+        <td class="auto-style4"></td>
+        <td class="auto-style6" colspan="23">PO BOX 153, PC 133</td>
+        <td class="auto-style4"></td>
+        <td class="auto-style4"></td>
+    </tr>
+    <tr height="29" style="mso-height-source:userset;height:21.95pt">
+        <td class="auto-style3" height="29"></td>
+        <td class="auto-style4"></td>
+        <td class="auto-style6" colspan="23">ALKHUWAIR, MUSCAT</td>
+        <td class="auto-style4"></td>
+        <td class="auto-style4"></td>
+    </tr>
+}
 else if (Model.ClientName.ToUpper().Trim() == "AL MADINA - REAL STATE")
 {
     <tr height="29" style="mso-height-source:userset;height:21.95pt">
