--- a/YandS.UI/Views/Finance/_CaseInvoiceClientAddressFormatB.cshtml
+++ b/YandS.UI/Views/Finance/_CaseInvoiceClientAddressFormatB.cshtml
@@ -35,6 +35,11 @@
                     <span style="font-size:22.0pt; mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin;color:black">TILAL DEVELOPMENT COMPANY SAOC</span> <br />
                     <span style="font-size:12.0pt; mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin;color:black">VATIN: OM110007481X</span> <br />
                 }
+                else if (Model.ClientName.ToUpper().Trim() == "TILAL INTERNATIONAL TRADE MARKS LLC")
+                {
+                    <span style="font-size:22.0pt; mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin;color:black">TILAL INTERNATIONAL TRADE MARKS LLC</span> <br />
+                    <span style="font-size:12.0pt; mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin;color:black">VATIN: OM1100123108 <br />2ND FLOOR, TILAL OFFICE COMPLEX, MUSCAT GRAND MALL<br /> PO BOX 153, PC 133<br />ALKHUWAIR, MUSCAT</span>
+                }
                 else if (Model.ClientName.ToUpper().Trim() == "AL MADINA - REAL STATE")
                 {
                     <span style="font-size:22.0pt; mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin;color:black">ALMADINA REAL ESTATE COMPANY SAOC</span> <br />
