--- a/YandS.UI/Views/CourtCases/Finance.cshtml
+++ b/YandS.UI/Views/CourtCases/Finance.cshtml
@@ -58,13 +58,13 @@
                                 <div class="tab-content" id="CourtCase-tabContent">
                                     <div class="tab-pane fade show active" id="tabs-SpecialInstruction" role="tabpanel" aria-labelledby="SpecialInstruction-tab">
                                         <div class="row">
-                                            <div class="col-sm-2">
+                                            <div class="col">
                                                 <div class="form-group">
                                                     @Html.LabelFor(model => model.ClaimAmount)
                                                     @Html.EditorFor(model => model.ClaimAmount, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                                                 </div>
                                             </div>
-                                            <div class="col-sm-6">
+                                            <div class="col-3">
                                                 <div class="col-sm-12">
                                                     <div class="row">
                                                         <div class="col-sm-8">
@@ -86,15 +86,24 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="col-sm-2">
+                                            <div class="col">
+                                                @Html.LabelFor(model => model.AccountContractNo)
+                                                @Html.EditorFor(model => model.AccountContractNo, new { htmlAttributes = new { @class = "form-control" } })
+                                            </div>
+                                            <div class="col">
+                                                @Html.LabelFor(model => model.ClientFileNo)
+                                                @Html.EditorFor(model => model.ClientFileNo, new { htmlAttributes = new { @class = "form-control" } })
+                                            </div>
+                                            <div class="col">
                                                 <label class="" for="StatusCode">TRANSPORTATION FEES</label>
                                                 @Html.DropDownList("TransportationFee", null, htmlAttributes: new { @class = "form-control select2bs4" })
                                             </div>
-                                            <div class="col-sm-2">
+                                            <div class="col">
                                                 <label class="" for="StatusCode">TRANSELATION</label>
                                                 @Html.DropDownList("Translation", null, htmlAttributes: new { @class = "form-control select2bs4" })
                                             </div>
                                         </div>
+                                        
                                         <div class="row">
                                             <div class="col-sm-12">
                                                 <div class="row p-1">
