Added Account Clousre User

--- a/YandS.UI/Views/CourtCases/FileClosure.cshtml
+++ b/YandS.UI/Views/CourtCases/FileClosure.cshtml
@@ -763,7 +763,7 @@
 
             $(".clsValidLogin").removeClass("AppHidden").addClass("AppHidden");
 
-            var AllowedUsers = ["1", "2", "3", "5", "6", "9"];
+            var AllowedUsers = ["1", "2", "3","4", "5", "6", "9","79"];
             $(".clsAccountProcedure").removeClass("AppHidden");
             if (AllowedUsers.indexOf($("#hidUserName").val()) == -1) {
                 $(".clsAccountProcedure").removeClass("AppHidden").addClass("AppHidden");
