--- a/YandS.UI/Views/CourtCases/Index.cshtml
+++ b/YandS.UI/Views/CourtCases/Index.cshtml
@@ -2101,7 +2101,7 @@
             });
 
             console.log($("#hidUserName").val());
-            var AllowedUsers = ["1", "2", "3", "4", "5", "6", "35", "37", "50"];
+            var AllowedUsers = ["1", "2", "3", "4", "5", "6", "35", "37", "50", "76"];
             $("#DIVCreateCase").removeClass("disableDIV").addClass("disableDIV");
             if (AllowedUsers.indexOf($("#hidUserName").val()) >= 0) {
                 $("#DIVCreateCase").removeClass("disableDIV");
